<resources>
    <string name="app_name">Contacts</string>
    <string name="action_settings">Settings</string>
    <string name="Add_New">Adicionar</string>
    <string name="edit">Editar</string>
    <string name="delete">Remover</string>
    <string name="title_activity_display_contact">Exibir contato</string>
    <string name="name">Nome</string>
    <string name="phone">Telefone</string>
    <string name="email">Email</string>
    <string name="street">Rua</string>
    <string name="country">Cidade/Estado</string>
    <string name="save">Salvar contato</string>
    <string name="deleteContact">Você tem certeza que deseja remover?.</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="cep">CEP</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="uf">UF</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="error_server_error">Erro ao buscar endereço</string>
    <string name="endereco_encontrado">Endereço encontrado</string>
    <string name="contato_salvo">Contado salvo com sucesso</string>
    <string name="error_salvar_contato">Ocorreu um erro ao salvar contato</string>
    <string name="nome_obrigatorio">O campo nome é obrigatório</string>
    <string name="telefone_obrigatorio">O campo telefone é obrigatório</string>
    <string name="email_obrigatorio">O campo email é obrigatório</string>
    <string name="cep_obrigatorio">O campo CEP é obrigatório</string>
    <string name="cidade_obrigatorio">O campo cidade é obrigatório</string>
    <string name="uf_obrigatorio">O campo UF é obrigatório</string>
    <string name="bairro_obrigatorio">O campo bairro é obrigatório</string>
    <string name="numero_obrigatorio">O campo número é obrigatório</string>
    <string name="email_invalido">O email digitado não é valido!</string>
    <string name="lista_vazia">Não há contatos adicionado!</string>
    <string name="buscando_endereco">Aguarde enquanto o endereço é buscado</string>
</resources>
